# Osmosis_Platanus

./: .gitignore  .gitmodules  .repomixignore  AGENTS.md  AUDIT_FEATURES.md  README.md  REPO.md  agent-compete.js  package.json  pnpm-lock.yaml  populate-test.sh  repair_history.sh  test-bot.js  test-bots.sh
apps/api/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/contracts/: .env.example  .gitignore  README.md  foundry.toml
apps/genlayer/: HACKATHON-GUIDE.md  pyproject.toml
apps/web/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  drizzle.config.ts  env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
apps/worker/: .env.example  .gitignore  README.md  (+3 more)
buildersclaw-app/: .env.example  AGENTS.md  JUDGING-FLOW.md  README.md  env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.json  vercel.json
buildersclaw-app/genlayer/: README.md  pyproject.toml  sitecustomize.py
buildersclaw-app/genlayer/contracts/: hackathon_judge.py  minimal_probe.py
buildersclaw-app/genlayer/tests/integration/: test_hackathon_judge.py
buildersclaw-design-system/: SKILL.md  colors_and_type.css
buildersclaw-genlayer/: CLAUDE.md  HACKATHON-GUIDE.md  README.md  package.json  requirements.txt
design-system/: README.md
docs/: ARCHITECTURE.md  apps-web-migration.md
hackaclaw-app/: .env.local.example  AGENTS.md  README.md  lint.json  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
hackaclaw-genlayer/: .gitignore
(+413 files in other folders)
